--- a/src/styles/banner.scss
+++ b/src/styles/banner.scss
@@ -1,11 +1,10 @@
 .banner {
   position: relative;
-  width: 335px;
+  width: 100%;
   height: 111px;
   border-radius: 10px;
   /* border: 1px solid #000; */
   overflow: hidden;
-  margin: 0 0 16px 0;
   display: flex;
   align-items: flex-end;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,0.25);
@@ -36,4 +35,5 @@
   font-size: 24px;
   z-index: 2;
   margin: 0;
+  max-width: calc(100% - 32px);
 }
