--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
-  margin: 24px 0;
+  margin-bottom: 24px;
+  width: 100%;
 }
 
 .card {
   position: relative;
   border-radius: 10px;
   overflow: hidden;
-  width: 335px;
+  width: 100%;
   height: 255px;
   /* background: #ff6060; */
   display: flex;
@@ -40,4 +41,5 @@
   z-index: 2;
   margin: 0;
   text-shadow: 0 2px 8px rgba(0,0,0,0.5);
+  max-width: calc(100% - 32px);
 }
