--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,3 +1,14 @@
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 0 16px 0;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  min-width: 0;
+}
+
 .header {
   display: flex;
   align-items: center;
