--- a/src/components/banner.scss
+++ b/src/components/banner.scss
@@ -4,7 +4,7 @@
   height: 140px;
   border-radius: 16px;
   overflow: hidden;
-  margin-bottom: 1.5rem;
+  margin-top: 20px;
 
   &__img {
     width: 100%;
