--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -24,7 +24,7 @@
       transition: color 0.2s;
 
       &.active {
-        color: #FF6060;
+        color: black;
         text-decoration: underline;
       }
     }
