--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -18,7 +18,7 @@
 
     a {
       color: #000;
-      font-size: 0.9rem;
+      font-size: 12px;
       font-weight: 500;
       text-transform: uppercase;
       transition: color 0.2s;
