--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,10 +1,10 @@
 .main-container {
   max-width: 1240px;
   margin: 0 auto;
-  padding: 27px;
+  padding: 27px !important;
   display: flex;
   flex-direction: column;
-  gap: 0px;
+  gap: 10px !important;
 }
 
 .cards_logement {
