--- a/src/components/banner.scss
+++ b/src/components/banner.scss
@@ -18,7 +18,7 @@
     background: rgba(0, 0, 0, 0.6);
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   &__title {
@@ -29,6 +29,10 @@
     text-align: left;
     padding: 0 1rem;
     z-index: 1;
+
+    span:first-child {
+      display: block;
+    }
   }
 
   @media (min-width: 768px) {
@@ -36,8 +40,17 @@
     border-radius: 25px;
     margin-bottom: 2rem;
 
+    &__overlay {
+      justify-content: center;
+    }
+
     &__title {
       font-size: 2.5rem;
+      text-align: center;
+
+      span:first-child {
+        display: inline;
+      }
     }
   }
 }
