--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -11,7 +11,20 @@
   }
 
   &__text {
-    font-size: 1rem;
-    opacity: 0.7;
+    font-size: 12px;
+    opacity: 1;
+    line-height: 1.2;
+
+    span:first-child {
+      display: block;
+    }
+  }
+
+  @media (min-width: 768px) {
+    &__text {
+      span:first-child {
+        display: inline;
+      }
+    }
   }
 } 
