--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -16,6 +16,9 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  background: #fff;
 }
 
 img, picture, video, canvas, svg {
