--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -4,11 +4,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 27px;
+  padding: 0 32px;
   padding-top: 27px;
 
   &__logo {
-    height: 40px;
+    height: 47px;
     width: auto;
   }
 
@@ -28,5 +28,38 @@
         text-decoration: underline;
       }
     }
+  }
+
+  // Desktop (1024px)
+  @media (min-width: 1024px) {
+    max-width: 960px;
+    width: 100%;
+    height: 68px;
+    margin: 25px auto 0;
+    padding: 0 32px;
+
+    &__logo {
+      height: 68px;
+    }
+
+    &__nav {
+      a {
+        font-size: 20px;
+      }
+    }
+  }
+
+  // Large Desktop (1280px)
+  @media (min-width: 1280px) {
+    max-width: 1240px;
+    width: 100%;
+    margin: 25px auto 0;
+    padding: 0 32px;
+  }
+  @media (min-width: 1440px) {
+    padding: 0 32px;
+  }
+  @media (min-width: 1920px) {
+    padding: 0 32px;
   }
 } 
