--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,10 +1,28 @@
 .main-container {
   max-width: 1240px;
+  width: 100%;
   margin: 0 auto;
-  padding: 27px !important;
+  padding: 0 32px;
   display: flex;
   flex-direction: column;
-  gap: 10px !important;
+  gap: 10px;
+
+  @media (min-width: 1024px) {
+    width: 960px;
+    max-width: 960px;
+    padding: 0 32px;
+  }
+  @media (min-width: 1280px) {
+    width: 100%;
+    max-width: 1240px;
+    padding: 0 32px;
+  }
+  @media (min-width: 1440px) {
+    padding: 0 32px;
+  }
+  @media (min-width: 1920px) {
+    padding: 0 32px;
+  }
 }
 
 .cards_logement {
