--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -5,7 +5,7 @@
   padding: 0 32px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px !important;
 
   @media (min-width: 1024px) {
     width: 960px;
@@ -32,8 +32,20 @@
 
   @media (min-width: 600px) {
     grid-template-columns: 1fr 1fr;
+    background-color: #F6F6F6;
+    padding: 20px;
+    border-radius: 25px;
   }
   @media (min-width: 900px) {
     grid-template-columns: 1fr 1fr 1fr;
+  }
+  @media (min-width: 1024px) {
+    background-color: #F6F6F6;
+    padding: 50px 35px;
+    border-radius: 25px;
+    gap: 50px;
+    .card {
+      aspect-ratio: 1/1;
+    }
   }
 } 
