page 404 ok et page accomodation aussi version desktop et mobile ok

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -2,15 +2,15 @@
   max-width: 1240px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 32px;
+  padding: 0 16px;
   display: flex;
   flex-direction: column;
   gap: 20px !important;
 
-  @media (min-width: 1024px) {
-    width: 960px;
-    max-width: 960px;
+  @media (min-width: 900px) {
     padding: 0 32px;
+    max-width: 1240px;
+    width: 100%;
   }
   @media (min-width: 1280px) {
     width: 100%;
@@ -38,8 +38,6 @@
   }
   @media (min-width: 900px) {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-  @media (min-width: 1024px) {
     background-color: #F6F6F6;
     padding: 50px 35px;
     border-radius: 25px;
