--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -29,13 +29,13 @@
     }
   }
 
-  // Desktop (1024px)
-  @media (min-width: 1024px) {
-    max-width: 960px;
+  // Desktop & tablette (900px+)
+  @media (min-width: 900px) {
+    max-width: 1240px;
     width: 100%;
-    height: 68px;
     margin: 25px auto 0;
     padding: 0 32px;
+    height: 68px;
 
     &__logo {
       height: 68px;
