--- a/src/components/banner.scss
+++ b/src/components/banner.scss
@@ -21,6 +21,12 @@
     justify-content: flex-start;
   }
 
+  // Spécifique à la page About
+  .about .banner__overlay {
+    background: rgba(0, 0, 0, 0.3);
+    mix-blend-mode: darken;
+  }
+
   &__title {
     color: #fff;
     font-size: 24px;
@@ -80,4 +86,9 @@
       text-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
+}
+
+.banner--about .banner__overlay {
+  background: rgba(0, 0, 0, 0.3);
+  mix-blend-mode: darken;
 }
