--- a/src/components/tag.scss
+++ b/src/components/tag.scss
@@ -3,9 +3,15 @@
   color: #fff;
   border-radius: 10px;
   padding: 0.2rem 1.2rem;
-  font-size: 0.95rem;
-  font-weight: 500;
+  font-size: 10px;
+  font-weight: 700;
   display: inline-block;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+@media (min-width: 768px) {
+  .tag {
+    font-size: 14px;
+  }
 } 
