--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -20,6 +20,7 @@
       color: #000;
       font-size: 12px;
       font-weight: 500;
+      text-transform: uppercase;
       transition: color 0.2s;
 
       &.active {
@@ -43,7 +44,8 @@
 
     &__nav {
       a {
-        font-size: 20px;
+        font-size: 24px;
+        text-transform: none;
       }
     }
   }
